--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,14 @@
+body {
+    background-color: #4ddbff
+}
+
+.section {
+    background-color: #fff;
+    padding: 15px;
+    margin-bottom: 10px;
+    border-radius: 10px;
+}
+
 .centerImage
 {
  text-align:center;
