--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
 }
 
 .section {
-    background-color: #fff;
+    background-color: #4ddbff;
     padding: 15px;
     margin-bottom: 10px;
     border-radius: 10px;
