--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,10 @@ body {
     background-color: #4ddbff
 }
 
+.copyright{ 
+    color: white;
+}
+
 .circular--square {
     border-radius: 50%;
 }
@@ -25,17 +29,28 @@ body {
 }
 
 
+progress { 
+    border: none; 
+    background: crimson;
+}
+
 .quote {
+    width: auto;
+    font-style: italic;
     font-size: 12pt;
     text-align: right;
     margin-top: 10px;
 }
 
 .section {
-    background-color: #fff;
+    background: transparent;
+    color: white;
     padding: 15px;
     margin-bottom: 10px;
     border-radius: 10px;
+    text-align: center;
+    margin-left: 10%; 
+    margin-right: 10%;
 }
 
 
@@ -115,7 +130,7 @@ header a, a:visited {
   right:0;
   bottom:0;
   width:100%;
-  height:100%;
+  height: 2400px; /*This part can extend the animation vertically*/
   display:block;
 }
 
