--- a/styles.css
+++ b/styles.css
@@ -66,6 +66,7 @@ table.center {
   }
 
 
+
 /* ============================================================================================== 
 SED Innovations
 https://sed.am
@@ -141,7 +142,9 @@ header a, a:visited {
   right:0;
   bottom:0;
   width:100%;
-  height: 4000px; /*This part can extend the animation vertically*/
+  height: 3500px;
+  /* background-size: auto;
+  background-repeat: repeat; */
   display:block;
 }
 
@@ -159,11 +162,13 @@ header a, a:visited {
   -o-animation:move-twink-back 200s linear infinite;
   -webkit-animation:move-twink-back 200s linear infinite;
   animation:move-twink-back 200s linear infinite;
+
 }
 
 .clouds{
     background:transparent url(http://www.script-tutorials.com/demos/360/images/clouds3.png) repeat top center;
     z-index:3;
+
 
   -moz-animation:move-clouds-back 200s linear infinite;
   -ms-animation:move-clouds-back 200s linear infinite;
